@@ -63,6 +63,11 @@ AT_COMPILE_CHECK([simple/igraph_get_shortest_paths_dijkstra.c],
          [simple/igraph_get_shortest_paths_dijkstra.out])
 AT_CLEANUP
 
+AT_SETUP([Betweenness (igraph_betweenness): ])
+AT_KEYWORDS([igraph_betweenness betweenness])
+AT_COMPILE_CHECK([simple/igraph_betweenness.c])
+AT_CLEANUP
+
 AT_SETUP([Edge betweenness (igraph_edge_betweenness): ])
 AT_KEYWORDS([igraph_edge_betweenness betwenness])
 AT_COMPILE_CHECK([simple/igraph_edge_betweenness.c], 
